cabal-version: 2.4
name:          vipbundle
version:       0.1.0.0

executable vipbundle
  hs-source-dirs: src
  main-is: VIPBundle.hs
  other-modules: VIPBundle.InterfaceInference
               , VIPBundle.Parse
               , VIPBundle.Pretty_QUARTUS_IP_TCL
               , VIPBundle.Types
  build-depends: base ^>=4.16.0.0
               , containers
               , pretty
               , filepath
               , parsec
               , regex-tdfa
  default-language: Haskell2010
